--- a/app/templates/adminbs5/layout.html
+++ b/app/templates/adminbs5/layout.html
@@ -112,7 +112,7 @@
                                 <li><a generator="adianti" href="index.php?class=SystemProfileView&register_state=false" class="dropdown-item">_t{Profile}</a></li>
                                 <li><a generator="adianti" href="index.php?class=LoginForm&method=reloadPermissions&static=1" class="dropdown-item">_t{Reload}</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a generator="adianti" href="index.php?class=LoginForm&method=onLogout&static=1" class="dropdown-item">Logout</a></li>
+                                <li><a generator="adianti" href="index.php?class=LoginForm&method=onLogout&static=1" class="dropdown-item">Sair</a></li>
                             </ul>
                         </div>
                     </div>
